<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingHorizontal="15dp"
    android:paddingVertical="25dp"
    android:orientation="vertical"
    tools:context=".Home">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="40dp"
            android:background="@drawable/icon"
            android:src="@drawable/buku"
            android:layout_height="40dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center"
            android:textSize="30dp"
            android:textStyle="bold"
            android:paddingLeft="13dp"
            android:fontFamily="sans-serif"/>
        <ImageView
            android:layout_width="40dp"
            android:layout_marginHorizontal="180dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_search" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="40dp">
        <Button
            android:layout_width="80dp"
            android:background="@drawable/category"
            android:text="@string/popular"
            android:textSize="12dp"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:layout_height="30dp"/>
        <View
            android:layout_width="10dp"
            android:layout_height="0dp"/>
        <TextView
            android:layout_width="80dp"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/latest"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/colorDarkMin"
            android:layout_height="30dp"/>
        <View
            android:layout_width="10dp"
            android:layout_height="0dp"/>
        <TextView
            android:layout_width="80dp"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/oldest"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/colorDarkMin"
            android:layout_height="30dp"/>
        <View
            android:layout_width="10dp"
            android:layout_height="0dp"/>
        <TextView
            android:layout_width="80dp"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/random"
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/colorDarkMin"
            android:layout_height="30dp"/>
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/popular"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/book_main"
            android:textAlignment="center"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textSize="24dp"
            android:textColor="@color/colorBlack"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="15dp"
            android:gravity="center_horizontal" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/book"
            android:layout_height="250dp"/>
        <View
            android:layout_width="0dp"
            android:layout_height="15dp"/>
        <Button
            android:layout_width="90dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@drawable/detail"
            android:text="@string/detail_main"
            android:textSize="12dp"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:layout_height="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/btntambah"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/menu"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:onClick="Tambah"
            android:src="@drawable/add" />

        <View
            android:layout_width="13dp"
            android:layout_height="0dp"/>
        <ImageView
            android:id="@+id/btnlihat"
            android:layout_width="80dp"
            android:clickable="true"
            android:onClick="Lihat"
            android:foreground="?attr/selectableItemBackground"
            android:background="@drawable/menu"
            android:src="@drawable/view"
            android:layout_height="80dp"/>
        <View
            android:layout_width="13dp"
            android:layout_height="0dp"/>
        <ImageView
            android:id="@+id/btntentang"
            android:layout_width="80dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/about"
            android:onClick="Tentang"
            android:background="@drawable/menu"
            android:layout_height="80dp"/>
        <View
            android:layout_width="13dp"
            android:layout_height="0dp"/>
        <ImageView
            android:id="@+id/btnkeluar"
            android:layout_width="80dp"

            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/exit"
            android:onClick="Keluar"
            android:clickable="true"
            android:background="@drawable/menu"
            android:layout_height="80dp"/>
    </LinearLayout>

</LinearLayout>